changed tab icon and title

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sofian Shublaq | Portfolio</title>
+    <link rel="icon" type="image/png" href="./Media/icon.png" />
 
     <!-- font awesome -->
     <link rel="stylesheet" href="CSS/all.min.css" />
